--- a/dtp/app/src/main/res/layout/fragment_canvas.xml
+++ b/dtp/app/src/main/res/layout/fragment_canvas.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/stream_bg"
-    tools:context=".TestFragment">
+    tools:context=".CanvasFragment">
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/fftSpectrumChart"
-        android:layout_width="270dp"
-        android:layout_height="220dp"
+    <com.mpower.dtp.AudioWaveformView
+        android:id="@+id/audioWaveform"
+        android:layout_width="260dp"
+        android:layout_height="190dp"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="131dp"
+        android:layout_marginEnd="136dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
